--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
 		"vite": "^4.4.2",
 		"vitest": "^0.32.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@tauri-apps/api": "^1.4.0"
+	}
 }
