--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@tauri-apps/api": "^1.4.0"
+		"@tauri-apps/api": "^1.4.0",
+		"express": "^4.18.2",
+		"http-proxy-middleware": "^2.0.6"
 	}
 }
